added json logback.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=inventory-failover-service
 server.port=8083
+
+#Zipkin configuration
+spring.zipkin.base-url=http://127.0.0.1:9411
