Added http basic security to eureka server, inventory service and config server Added http basic in request for other services + feign client.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8083
 
 #Zipkin configuration
 spring.zipkin.base-url=http://127.0.0.1:9411
+
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
